Favi and title tag change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Coming Soon | The Squad</title>
+        <title>Coming Soon | Rare Squid Creative</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Afacad&display=swap" rel="stylesheet" />
